slicing register 1 - otp -- done

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,14 @@
 // app global css in SCSS form
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 .base-container{
-        width: 480px;
-        background-color: $secondary;
+        width: 418px;
+        // background-color: $secondary;
         padding:16px 37px;
+        padding-top:70px;
+}
+.line-cards{
+        color:$secondary;
+        border:3px solid $secondary;
+        margin-right:-20px;
+        margin-left: -20px;
 }
