--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,7 @@
 // app global css in SCSS form
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 .base-container{
-        width: 418px;
+        width: 428px;
         // background-color: $secondary;
         padding:16px 37px;
         padding-top:70px;
@@ -11,4 +11,61 @@
         border:3px solid $secondary;
         margin-right:-20px;
         margin-left: -20px;
+}
+
+.title-section{
+	white-space: nowrap;
+	text-align: left;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 15px;
+	color: rgba(25,135,191,1);
+	letter-spacing: 0.05px;
+}
+.title-inputan{
+	white-space: nowrap;
+	text-align: left;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 13px;
+	color: rgba(25,135,191,1);
+	letter-spacing: 0.05px;
+}
+.Line_85 {
+	width: 396px;
+	height: 1px;
+	transform: matrix(1,0,0,1,0,0);
+    margin-left:-16px;
+}
+#Line_85 {
+	fill: transparent;
+	stroke: rgba(204,219,220,1);
+	stroke-width: 1px;
+	stroke-linejoin: miter;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+
+.q-field--outlined .q-field__control{
+    border-radius: 8px;
+}
+
+.judulringkasan{
+    width:116px;
+}
+.text-edit{
+	color:rgba(25,135,191,1);
+}
+
+.text-13{
+	font-size: 13px;
+}
+.text-15{
+	font-size: 15px;
+}
+.text-17{
+	font-size: 17px;
 }
