fixing news, change pw

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,6 +3,11 @@
 .mobile, .base-container{
 	width:428px;
 }
+// @media (max-width: 427px){
+// 	.mobile, .base-container{
+// 		width:100vw;
+// 	}
+// }
 .base-container{
         // background-color: $secondary;
         padding:16px 37px;
